# git4aiagents

./: .gitignore  CNAME  LICENSE  README.md  index.html  llms-full.txt  llms.txt  pyproject.toml  robots.txt  sitemap.xml
.g4a/: config.json
.well-known/: ai-plugin.json
docs/: HLD.md
g4a/: __main__.py  git_utils.py
g4a/capture/: engine.py  transcript.py
g4a/cli/: main.py
g4a/cli/commands/: capture.py  init.py  log.py  why.py
g4a/query/: reader.py  search.py
g4a/security/: masker.py
g4a/storage/: notes.py
